Fixed bottom Padding on ProductCard to show it on Mobile Responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,6 @@ body {
   max-width: 1600px;
   margin: 20px auto;
   padding: 0 40px;
-  height: 100%; 
   overflow: hidden;
   /* color: var(--foreground); */
   /* background-color: var(--background); */
